Fixing tab header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,6 +82,7 @@
 
   .footer footer a {
     display: flex;
+    flex-direction: column;
     align-items: center;
   }
 
@@ -196,16 +197,15 @@
 </div>
 
 <div class="footer" role="footer">
-  <img
-    width="40"
-    alt="Cactus"
-    src="assets/Cactus.png"
-  />
-
   <!-- Footer -->
   <footer>
     <a title="Reach Out" href="mailto:shreya.shenoy27@gmail.com" target="_blank" rel="noopener">
-      Reach Out
+      <img
+        width="40"
+        alt="Cactus"
+        src="assets/Cactus.png"
+      />
+      <p>Reach Out</p>
     </a>
   </footer>
 
